  - all - cleanup nodejs dependencies
  - all - refactor how authentication is done, everything now uses passportjs
  - all - support oidc authentication method
  - capture - support ERSPAN Type I and vlan for Type II
  - capture - new kafka plugin for sessions
  - capture - use malloc instead of GSlice
  - capture - corrupt DNS alt name memory leak fixed
  - cont3xt - raw create link groups
  - cont3xt - two clicks to delete link groups or links
  - cont3xt - classify domains with multiple dashes correctly
  - cont3xt - added ability to copy links between link groups
  - cont3xt - support intl phonenumbers
  - db.pl - Initial OpenSearch ISM support
  - db.pl - Better error text for cert verify failure
  - esproxy - fix converting basic auth to base64
  - viewer - fix field actions crash
  - viewer - can now use expression  http.request.FIELD or http.response.FIELD
             with headers-http-request, headers-http-response defined fields
  - viewer - support viewing ipv6 DLT_RAW (#1293)
  - viewer - ESAdmin -> Unflood works on users cluster now also


4.1.0 2023/01/10
  - release - glib 2.72.4 cyberchef 9.55.0 flot 4.2.3 d3 7.7
  - db.pl - backup/restore wasn't dealing with templates correctly
  - db.pl - upgrade failed if there was no moloch_shared user
  - db.pl - repair now fixes missing history/ecs templates
  - db.pl - fix users-export/users-import
  - cont3xt - support missing auth and userTmpl settings
  - cont3xt - Hide link group when no links match filter
  - cont3xt - Added landing page
  - capture - allow wise field dst.ip:port
  - capture - add VNI field
  - capture - initial tzsp reader support
  - capture - y2038 fixes
  - capture - Integer ops in rules now support a leading min or max which only 
              sets the value if less than or greater than current value
  - wise - added usersElasticsearchBasicAuth setting and lmdb cache support
  - wise - add passivetotal value action if at least key is defined